tests/invalid_loop/test_uv_timer.php
<?php
$class = 'UVTimer';
require __DIR__ . '/../../test-tools.php';
require __DIR__ . '/error_handler.php';
$timer = new UVTimer(new stdClass());
